<resources>
    <string name="app_name">App Lista Curso</string>
    <string name="app_lista_vip">Aplicativo Lista VIP Curso Android</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="telefone_de_contato">Telefone de Contato</string>
    <string name="limpar">LIMPAR</string>
    <string name="salvar">SALVAR</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="selecione_um_curso">Selecione um curso:</string>
</resources>