<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_appListaVip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/app_lista_vip"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_primeiro_nome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/primeiro_nome"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/sobrenome"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_nome_curso"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/nome_do_curso_desejado"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_telefone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/telefone_de_contato"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_limpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/limpar" />

                <Button
                    android:id="@+id/button_salvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:text="@string/salvar" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/txtListaSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/selecione_um_curso"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/button_finalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/finalizar" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>